# WalnutApp

./: .gitignore  CMakeLists.txt  Doxyfile  compile_commands.json  compile_flags.txt  xmake.lua
Scripts/: cmakemsbuild.bat  cmakevcpkg.bat  compile.bat  vsxmake.bat  xcmake.bat  xninja.bat
Walnut/: Application.cpp  Image.cpp  Model.cpp  Model.h
Walnut/Input/: Input.cpp
cmake/: ezvcpkg.cmake  xrepo.cmake
doxygen/html/: _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _ray_8h.html  _ray_8h.js  _ray_8h_source.html  _ray_layer_8h.html  _ray_layer_8h.js  _ray_layer_8h_source.html  _renderer_8cpp.html  _renderer_8h.html  _renderer_8h.js  _renderer_8h_source.html  _scene_8h.html  _scene_8h.js  _scene_8h_source.html  annotated.html  annotated_dup.js  class_camera-members.html  class_camera.html  class_camera.js  class_demo_layer-members.html  class_demo_layer.html  class_demo_layer.js  class_ray_layer-members.html  class_ray_layer.html  class_ray_layer.js  class_renderer-members.html  class_renderer.html  class_renderer.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  (+25 more)
shaders/: point_light.frag.spv  point_light.vert.spv
src/: Camera.cpp  DemoLayer.h  EditorLayer.h  GameEditorLayer.h  RayLayer.h  Renderer.cpp  Renderer.h  XingBuffer.cpp  XingBuffer.h  XingDevice.cpp  XingDevice.h  XingGameObject.cpp  XingGameObject.h  XingModel.cpp  XingModel.h  XingPipeline.cpp  XingPipeline.h  XingRenderer.cpp  XingRenderer.h  main.cpp  pch.h
(+55 files in other folders)
